{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 44,
  "lineage": "b8dcce0b-605e-c94e-bdc1-7294ca99fc7d",
  "resources": [
    {
      "module": "module.create_App-Gateway",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "lb-AGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/backend-pool-1",
                "ip_addresses": [
                  "10.0.0.4",
                  "10.0.1.4"
                ],
                "name": "backend-pool-1"
              },
              {
                "fqdns": [],
                "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/backend-pool-2",
                "ip_addresses": [
                  "10.0.1.4"
                ],
                "name": "backend-pool-2"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/http-settings",
                "name": "http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/frontend-ip",
                "name": "frontend-ip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/publicIPAddresses/lb-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/frontend-port",
                "name": "frontend-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/gatewayIPConfigurations/gateway-ip-configuration",
                "name": "gateway-ip-configuration",
                "subnet_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet1-Hub/subnets/subnet-frontend"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/frontend-ip",
                "frontend_ip_configuration_name": "frontend-ip",
                "frontend_port_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/frontend-port",
                "frontend_port_name": "frontend-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/Listener",
                "name": "Listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway",
            "identity": [],
            "location": "eastus",
            "name": "appgateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/Listener",
                "http_listener_name": "Listener",
                "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/requestRoutingRules/route-rule1",
                "name": "route-rule1",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "PathBasedRouting",
                "url_path_map_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/urlPathMaps/url-path-map",
                "url_path_map_name": "url-path-map"
              }
            ],
            "resource_group_name": "rg-hub",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_Small",
                "tier": "Standard"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/backend-pool-1",
                "default_backend_address_pool_name": "backend-pool-1",
                "default_backend_http_settings_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/http-settings",
                "default_backend_http_settings_name": "http-settings",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "",
                "default_rewrite_rule_set_name": "",
                "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/urlPathMaps/url-path-map",
                "name": "url-path-map",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/backend-pool-1",
                    "backend_address_pool_name": "backend-pool-1",
                    "backend_http_settings_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/http-settings",
                    "backend_http_settings_name": "http-settings",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/urlPathMaps/url-path-map/pathRules/women",
                    "name": "women",
                    "paths": [
                      "/women/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  },
                  {
                    "backend_address_pool_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/backend-pool-2",
                    "backend_address_pool_name": "backend-pool-2",
                    "backend_http_settings_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/http-settings",
                    "backend_http_settings_name": "http-settings",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/applicationGateways/appgateway/urlPathMaps/url-path-map/pathRules/men",
                    "name": "men",
                    "paths": [
                      "/men/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  }
                ]
              }
            ],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_App-Gateway.azurerm_public_ip.pip-AGW",
            "module.create_NICs.azurerm_network_interface.nic_vm1",
            "module.create_NICs.azurerm_network_interface.nic_vm2",
            "module.create_RG.azurerm_resource_group.rg",
            "module.create_VMs.azurerm_virtual_machine.webserver-1",
            "module.create_VMs.azurerm_virtual_machine.webserver-2",
            "module.create_Vnet-Subnets.azurerm_subnet.subnet",
            "module.create_Vnet-Subnets.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.create_App-Gateway",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-AGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/publicIPAddresses/lb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "lb-pip",
            "resource_group_name": "rg-hub",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.create_NICs.azurerm_network_interface.nic_vm1",
            "module.create_NICs.azurerm_network_interface.nic_vm2",
            "module.create_RG.azurerm_resource_group.rg",
            "module.create_VMs.azurerm_virtual_machine.webserver-1",
            "module.create_VMs.azurerm_virtual_machine.webserver-2",
            "module.create_Vnet-Subnets.azurerm_subnet.subnet",
            "module.create_Vnet-Subnets.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.create_NICs",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/networkInterfaces/nic_vm1",
            "internal_domain_name_suffix": "dpjig4fmug3uvpgsgwhfkpjwdb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_vm1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet1-Hub/subnets/subnet1_vnet1-Hub"
              }
            ],
            "location": "eastus",
            "name": "nic_vm1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "rg-hub"
          },
          "dependencies": [
            "module.create_RG.azurerm_resource_group.rg",
            "module.create_Vnet-Subnets.azurerm_subnet.subnet",
            "module.create_Vnet-Subnets.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.create_NICs",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/networkInterfaces/nic_vm2",
            "internal_domain_name_suffix": "dpjig4fmug3uvpgsgwhfkpjwdb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_vm2",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet1-Hub/subnets/subnet2_vnet1-Hub"
              }
            ],
            "location": "eastus",
            "name": "nic_vm2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-hub"
          },
          "dependencies": [
            "module.create_RG.azurerm_resource_group.rg",
            "module.create_Vnet-Subnets.azurerm_subnet.subnet",
            "module.create_Vnet-Subnets.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.create_NSG",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "location": "eastus",
            "name": "nsg1",
            "resource_group_name": "rg-hub",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsg_rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_RG.azurerm_resource_group.rg",
            "module.create_Vnet-Subnets.azurerm_subnet.subnet",
            "module.create_Vnet-Subnets.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.create_NSG",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet1-Hub/subnets/subnet1_vnet1-Hub",
            "network_security_group_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "subnet_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet1-Hub/subnets/subnet1_vnet1-Hub"
          },
          "dependencies": [
            "module.create_NSG.azurerm_network_security_group.nsg1",
            "module.create_RG.azurerm_resource_group.rg",
            "module.create_Vnet-Subnets.azurerm_subnet.subnet",
            "module.create_Vnet-Subnets.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.create_NSG",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet1-Hub/subnets/subnet2_vnet1-Hub",
            "network_security_group_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "subnet_id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet1-Hub/subnets/subnet2_vnet1-Hub"
          },
          "dependencies": [
            "module.create_NSG.azurerm_network_security_group.nsg1",
            "module.create_RG.azurerm_resource_group.rg",
            "module.create_Vnet-Subnets.azurerm_subnet.subnet",
            "module.create_Vnet-Subnets.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.create_Vnet-Subnets",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet1-Hub/subnets/subnet1_vnet1-Hub",
            "name": "subnet1_vnet1-Hub",
            "resource_group_name": "rg-hub",
            "virtual_network_name": "vnet1-Hub"
          },
          "dependencies": [
            "module.create_RG.azurerm_resource_group.rg",
            "module.create_Vnet-Subnets.azurerm_virtual_network.vnet1"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet1-Hub/subnets/subnet2_vnet1-Hub",
            "name": "subnet2_vnet1-Hub",
            "resource_group_name": "rg-hub",
            "virtual_network_name": "vnet1-Hub"
          },
          "dependencies": [
            "module.create_RG.azurerm_resource_group.rg",
            "module.create_Vnet-Subnets.azurerm_virtual_network.vnet1"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet1-Hub/subnets/subnet-frontend",
            "name": "subnet-frontend",
            "resource_group_name": "rg-hub",
            "virtual_network_name": "vnet1-Hub"
          },
          "dependencies": [
            "module.create_RG.azurerm_resource_group.rg",
            "module.create_Vnet-Subnets.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.create_Vnet-Subnets",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7883d21b-a1ac-4abb-bcd2-358e553d3619",
            "id": "/subscriptions/a9343961-8da0-4a12-bf0f-4ed594492ea4/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet1-Hub",
            "location": "eastus",
            "name": "vnet1-Hub",
            "resource_group_name": "rg-hub"
          },
          "dependencies": [
            "module.create_RG.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}